added exports to docker run command